WIP basic AI utils
Added POC method of finding available destinations from memory in Player.java. Activate with debug visuals with 'Z'. Highlights potential destinations in Red.